--- a/index.html
+++ b/index.html
@@ -57,19 +57,27 @@
             letter-spacing: -0.02em;
         }
 
-        .logo-text span {
-            background: #1d1d1f;
-            color: white;
-            padding: 2px 6px;
-        }
+        /* logo colours */
+.logo-text {
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: -0.02em;
+  color: #000000;        /* “JAIDEE” in black */
+}
 
-        .tagline {
-            font-size: 11px;
-            color: #6e6e73;
-            text-transform: uppercase;
-            letter-spacing: 0.08em;
-            font-weight: 500;
-        }
+.logo-text span {
+  background: #f9a500;   /* black box behind “CLEAR” */
+  color: #FFFFFF;        /* white text for the word “CLEAR” */
+  padding: 2px 6px;
+}
+
+.tagline {
+  font-size: 11px;
+  font-weight: 500;
+  color: #000000;        /* tagline in black to match the official logo */
+  text-transform: uppercase;
+  letter-spacing: 0.08em;
+}
 
         .price-badge {
             font-size: 14px;
