--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
                     <span>✨ IWFA Member</span>
                     <span>✓ Professional Installation</span>
                 </div>
-                <p class="copyright">© 2025 JaiDeeClear. On-site service throughout Bangkok.</p>
+                <p class="copyright">© 2025 JaiDeeClear. On-site service throughout Thailand</p>
             </div>
         </div>
     </footer>
