--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
 
         .popular-badge {
             position: absolute;
-            top: 32px;
+            top: 12px;
             left: 0;
-            background: #1d1d1f;
+            background: #f9a500;
             color: white;
             padding: 6px 16px;
             font-size: 11px;
