--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JaiDeeClear - UV Protection Film Quote Request</title>
+    <title>JaiDeeClear - UV Protection Film </title>
     <style>
         * {
             margin: 0;
@@ -642,6 +642,22 @@
                 font-size: 24px;
             }
         }
+            /* Social links icons */
+    .social-links {
+        display: flex;
+        justify-content: center;
+        gap: 16px;
+        margin-top: 24px;
+    }
+    .social-links a {
+        color: #f9a500;   /* base colour; adjust as needed */
+        font-size: 24px;
+        text-decoration: none;
+    }
+    .social-links a:hover {
+        color: #FFA500;  /* orange on hover to match your brand */
+    }
+
     </style>
 </head>
 <body>
@@ -1215,6 +1231,19 @@
     <footer>
         <div class="container">
             <div class="footer-content">
+                                <div class="social-links">
+                    <a href="https://www.facebook.com/Jaideeclear"
+                       target="_blank"
+                       aria-label="Facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/jaideeclear"
+                       target="_blank"
+                       aria-label="Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+
                 <div class="certifications">
                     <span>🏆 ISO 9001 Certified</span>
                     <span>✨ IWFA Member</span>
