--- a/index.html
+++ b/index.html
@@ -1216,8 +1216,8 @@
                     </p>
                     <div class="contact-info">
                         <p><strong>Contact Us:</strong></p>
-                        <p>📞 +66 92-006-8100</p>
-                        <p>💬 @jaideeclear</p>
+                        <p>📞 +66 84-365-9664</p>
+                        <p>📱@jaideeclear</p>
                         <p>✉️ jaideeclear@gmail.com</p>
                     </div>
                     <button class="btn btn-primary" onclick="resetForm()" style="margin-top: 32px;">
