Update logo, remove pricing text, and remove footer certifications

--- a/index.html
+++ b/index.html
@@ -664,12 +664,8 @@
     <header>
         <div class="header-content">
             <div class="logo-container">
-                <div>
-                    <div class="logo-text">JAIDEE<span>CLEAR</span></div>
-                    <div class="tagline">UV Protection Film</div>
-                </div>
+                <img src="jdclogo.jpg" alt="JaiDee Clear Logo" style="height: 60px; width: auto;">
             </div>
-            <div class="price-badge">Starting at ฿40/sq.ft</div>
         </div>
     </header>
 
@@ -1244,11 +1240,6 @@
                     </a>
                 </div>
 
-                <div class="certifications">
-                    <span>🏆 ISO 9001 Certified</span>
-                    <span>✨ IWFA Member</span>
-                    <span>✓ Professional Installation</span>
-                </div>
                 <p class="copyright">© 2025 JaiDeeClear. On-site service throughout Thailand</p>
             </div>
         </div>
