--- a/index.html
+++ b/index.html
@@ -688,35 +688,35 @@
                 </div>
                 <div class="property-grid">
                     <button class="property-card" onclick="selectProperty('House')">
-                        <div class="icon">🏠</div>
+                        <img src="house.jpg" alt="House" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
                         <div class="label">House</div>
                     </button>
                     <button class="property-card" onclick="selectProperty('Condo')">
-                        <div class="icon">🏢</div>
+                        <img src="condo.jpg" alt="Condo" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
                         <div class="label">Condo</div>
                     </button>
                     <button class="property-card" onclick="selectProperty('Villa')">
-                        <div class="icon">🏰</div>
+                        <img src="villa.jpg" alt="Villa" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
                         <div class="label">Villa</div>
                     </button>
                     <button class="property-card" onclick="selectProperty('Townhouse')">
-                        <div class="icon">🏘️</div>
+                        <img src="townhouse.jpg" alt="Townhouse" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
                         <div class="label">Townhouse</div>
                     </button>
                     <button class="property-card" onclick="selectProperty('Office')">
-                        <div class="icon">💼</div>
+                        <img src="office.jpg" alt="Office" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
                         <div class="label">Office</div>
                     </button>
-                    <button class="property-card" onclick="selectProperty('Shop')">
-                        <div class="icon">🏪</div>
-                        <div class="label">Shop</div>
+                    <button class="property-card" onclick="selectProperty('Building')">
+                        <img src="building.jpg" alt="Building" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
+                        <div class="label">Building</div>
                     </button>
                     <button class="property-card" onclick="selectProperty('Cafe')">
-                        <div class="icon">☕</div>
+                        <img src="cafe.jpg" alt="Cafe" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
                         <div class="label">Cafe</div>
                     </button>
                     <button class="property-card" onclick="selectProperty('Other')">
-                        <div class="icon">🏗️</div>
+                        <img src="other.jpg" alt="Other" style="width: 100%; height: 120px; object-fit: cover; border-radius: 12px; margin-bottom: 12px;">
                         <div class="label">Other</div>
                     </button>
                 </div>
