--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         .recommended-badge {
             position: absolute;
             top: 12px;
-            right: 12px;
+            right: 32px;
             background: #34C759;
             color: white;
             padding: 6px 16px;
@@ -310,8 +310,9 @@
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.06em;
-            border-radius: 4px;
+            border-radius: 6px;
             display: none;
+            box-shadow: 0 2px 8px rgba(52, 199, 89, 0.25);
         }
 
         .film-card.recommended .recommended-badge {
@@ -325,6 +326,7 @@
             margin-bottom: 24px;
             flex-wrap: wrap;
             gap: 16px;
+            padding-top: 8px;
         }
 
         .film-info h2 {
@@ -374,30 +376,69 @@
         .suitability {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 20px;
-            margin-bottom: 28px;
+            gap: 16px;
+            margin-bottom: 32px;
         }
 
         .suitability-item {
-            background: #fafafa;
-            border-radius: 12px;
-            padding: 18px;
-            border: 1px solid #f0f0f0;
+            background: #f9f9f9;
+            border-radius: 16px;
+            padding: 24px;
+            border: 1px solid #e8e8ed;
+            transition: all 0.3s ease;
+        }
+
+        .suitability-item:hover {
+            background: #ffffff;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.06);
+            transform: translateY(-2px);
+        }
+
+        .suitability-item:first-child {
+            background: linear-gradient(135deg, #f0fdf4 0%, #f9f9f9 100%);
+            border: 1.5px solid #34C759;
+        }
+
+        .suitability-item:first-child:hover {
+            background: linear-gradient(135deg, #ecfdf5 0%, #ffffff 100%);
+            box-shadow: 0 4px 20px rgba(52, 199, 89, 0.15);
+        }
+
+        .suitability-item:nth-child(2) {
+            background: linear-gradient(135deg, #fef2f2 0%, #f9f9f9 100%);
+            border: 1.5px solid #ef4444;
+        }
+
+        .suitability-item:nth-child(2):hover {
+            background: linear-gradient(135deg, #fef2f2 0%, #ffffff 100%);
+            box-shadow: 0 4px 20px rgba(239, 68, 68, 0.15);
         }
 
         .suitability-item h4 {
-            font-size: 11px;
-            font-weight: 600;
+            font-size: 12px;
+            font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 0.08em;
-            color: #86868b;
-            margin-bottom: 10px;
+            letter-spacing: 0.1em;
+            margin-bottom: 12px;
+        }
+
+        .suitability-item:first-child h4 {
+            color: #059669;
+        }
+
+        .suitability-item:nth-child(2) h4 {
+            color: #dc2626;
+        }
+
+        .suitability-item:nth-child(3) h4 {
+            color: #6366f1;
         }
 
         .suitability-item p {
-            font-size: 14px;
+            font-size: 15px;
             color: #1d1d1f;
-            line-height: 1.5;
+            line-height: 1.6;
+            font-weight: 400;
         }
 
         .button-group {
