Add Seline analytics script to track website analytics

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JaiDeeClear - UV Protection Film </title>
+    <script async src="https://cdn.seline.com/seline.js" data-token="900711a10bdeff9"></script>
     <style>
         * {
             margin: 0;
