Update film content and optimize layout for mobile - reduce card sizes and scrolling

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         .film-card {
             background: white;
             border-radius: 18px;
-            padding: 32px;
+            padding: 24px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
             transition: all 0.3s ease;
             position: relative;
@@ -369,16 +369,16 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
-            margin-bottom: 24px;
+            margin-bottom: 16px;
             flex-wrap: wrap;
-            gap: 16px;
+            gap: 12px;
             padding-top: 8px;
         }
 
         .film-info h2 {
-            font-size: 28px;
+            font-size: 24px;
             font-weight: 600;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
             letter-spacing: -0.02em;
             color: #1d1d1f;
         }
@@ -394,7 +394,7 @@
         }
 
         .price-amount {
-            font-size: 48px;
+            font-size: 36px;
             font-weight: 600;
             line-height: 1;
             color: #1d1d1f;
@@ -422,14 +422,14 @@
         .suitability {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 16px;
-            margin-bottom: 32px;
+            gap: 12px;
+            margin-bottom: 20px;
         }
 
         .suitability-item {
             background: #f9f9f9;
-            border-radius: 16px;
-            padding: 24px;
+            border-radius: 12px;
+            padding: 16px;
             border: 1px solid #e8e8ed;
             transition: all 0.3s ease;
         }
@@ -461,11 +461,11 @@
         }
 
         .suitability-item h4 {
-            font-size: 12px;
+            font-size: 11px;
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
         }
 
         .suitability-item:first-child h4 {
@@ -481,9 +481,9 @@
         }
 
         .suitability-item p {
-            font-size: 15px;
+            font-size: 14px;
             color: #1d1d1f;
-            line-height: 1.6;
+            line-height: 1.5;
             font-weight: 400;
         }
 
@@ -900,31 +900,23 @@
                                 <p class="lifespan">Lifespan: 2-3 years</p>
                             </div>
                             <div class="price">
-                                <div class="price-amount">฿50</div>
+                                <div class="price-amount">฿50-70</div>
                                 <div class="price-unit">per sq.ft</div>
                             </div>
                         </div>
-                        <div class="specs">
-                            <span>UVR 95%</span>
-                            <span>IRR 35%</span>
-                            <span>TSER 40%</span>
-                        </div>
+                        <p style="font-size: 14px; color: #6e6e73; margin-bottom: 16px; line-height: 1.6;">The Carbon Series is our most affordable entry-level option, offering solid basic UV protection for temporary or budget-friendly needs.</p>
                         <div class="suitability">
                             <div class="suitability-item">
                                 <h4>Best for</h4>
-                                <p>Budget-conscious homeowners, rental properties, small residential windows, cost-sensitive projects</p>
+                                <p>Budget-conscious customers, short-term window film needs, basic UV protection projects</p>
                             </div>
                             <div class="suitability-item">
                                 <h4>Not recommended for</h4>
-                                <p>High-end luxury properties, areas requiring maximum heat rejection, long-term commercial installations</p>
-                            </div>
-                            <div class="suitability-item">
-                                <h4>Commonly used in</h4>
-                                <p>Apartment rentals, student housing, temporary office spaces, seasonal properties</p>
+                                <p>Long-term installations (5+ years), heat-intensive environments, premium aesthetic preferences, commercial buildings requiring durability</p>
                             </div>
                         </div>
                         <div class="button-group">
-                            <button class="btn btn-primary" onclick="selectFilm('Carbon Series', 50)">Schedule On-Site Measurement</button>
+                            <button class="btn btn-primary" onclick="selectFilm('Carbon Series', 60)">Schedule On-Site Measurement</button>
                             <a href="https://online.fliphtml5.com/uuelh/kasv/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                                 View Catalogue
                             </a>
@@ -939,31 +931,23 @@
                                 <p class="lifespan">Lifespan: 2-3 years</p>
                             </div>
                             <div class="price">
-                                <div class="price-amount">฿75</div>
+                                <div class="price-amount">฿75-90</div>
                                 <div class="price-unit">per sq.ft</div>
                             </div>
                         </div>
-                        <div class="specs">
-                            <span>UVR 99%</span>
-                            <span>IRR 45%</span>
-                            <span>TSER 50%</span>
-                        </div>
+                        <p style="font-size: 14px; color: #6e6e73; margin-bottom: 16px; line-height: 1.6;">This series uses reflective technology for effective heat rejection and a distinctive metallic finish, offering good value for mid-range budgets.</p>
                         <div class="suitability">
                             <div class="suitability-item">
                                 <h4>Best for</h4>
-                                <p>Privacy seekers, street-facing windows, bathrooms, ground floor spaces, commercial storefronts</p>
+                                <p>Reflective heat rejection, customers prioritizing solar control, building aesthetics with metallic appearance</p>
                             </div>
                             <div class="suitability-item">
                                 <h4>Not recommended for</h4>
-                                <p>Spaces requiring WiFi/cellular signals, high-tech offices, medical facilities with sensitive equipment</p>
-                            </div>
-                            <div class="suitability-item">
-                                <h4>Commonly used in</h4>
-                                <p>Urban homes, retail shops, beauty salons, clinics, ground-floor apartments, cafes</p>
+                                <p>Areas needing long-term durability, customers sensitive to a reflective appearance, premium UV protection needs</p>
                             </div>
                         </div>
                         <div class="button-group">
-                            <button class="btn btn-primary" onclick="selectFilm('Metallic Series', 75)">Schedule On-Site Measurement</button>
+                            <button class="btn btn-primary" onclick="selectFilm('Metallic Series', 83)">Schedule On-Site Measurement</button>
                             <a href="https://online.fliphtml5.com/qacii/cpsf/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                                 View Catalogue
                             </a>
@@ -980,31 +964,23 @@
                                 <p class="lifespan">Lifespan: 5-7 years</p>
                             </div>
                             <div class="price">
-                                <div class="price-amount">฿90</div>
+                                <div class="price-amount">฿90-110</div>
                                 <div class="price-unit">per sq.ft</div>
                             </div>
                         </div>
-                        <div class="specs">
-                            <span>UVR 99%</span>
-                            <span>IRR 65%</span>
-                            <span>TSER 60%</span>
-                        </div>
+                        <p style="font-size: 14px; color: #6e6e73; margin-bottom: 16px; line-height: 1.6;">Our most popular choice, Ceramic Nano offers excellent value with nano-ceramic technology for heat and glare reduction without a metallic look.</p>
                         <div class="suitability">
                             <div class="suitability-item">
                                 <h4>Best for</h4>
-                                <p>Modern homes, condos, home offices, WiFi-dependent spaces, tech-savvy homeowners</p>
+                                <p>Residential homes wanting quality, mid-range budget customers, natural light and visibility important, heat reduction with modern appearance</p>
                             </div>
                             <div class="suitability-item">
                                 <h4>Not recommended for</h4>
-                                <p>Extreme budget constraints, very short-term installations, historic buildings requiring specific aesthetics</p>
-                            </div>
-                            <div class="suitability-item">
-                                <h4>Commonly used in</h4>
-                                <p>Living rooms, bedrooms, home offices, smart homes, co-working spaces, modern apartments</p>
+                                <p>Extreme heat environments, maximum UV blocking requirements, very tight budgets</p>
                             </div>
                         </div>
                         <div class="button-group">
-                            <button class="btn btn-primary" onclick="selectFilm('Ceramic Nano', 90)">Schedule On-Site Measurement</button>
+                            <button class="btn btn-primary" onclick="selectFilm('Ceramic Nano', 100)">Schedule On-Site Measurement</button>
                             <a href="https://online.fliphtml5.com/qacii/cqfp/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                                 View Catalogue
                             </a>
@@ -1019,31 +995,23 @@
                                 <p class="lifespan">Lifespan: 7-9 years</p>
                             </div>
                             <div class="price">
-                                <div class="price-amount">฿110</div>
+                                <div class="price-amount">฿110-130</div>
                                 <div class="price-unit">per sq.ft</div>
                             </div>
                         </div>
-                        <div class="specs">
-                            <span>UVR 99.9%</span>
-                            <span>IRR 70%</span>
-                            <span>TSER 65%</span>
-                        </div>
+                        <p style="font-size: 14px; color: #6e6e73; margin-bottom: 16px; line-height: 1.6;">Designed to block the widest spectrum of harmful UV rays, this film is perfect for preserving valuable interiors and ensuring optimal protection.</p>
                         <div class="suitability">
                             <div class="suitability-item">
                                 <h4>Best for</h4>
-                                <p>Health-conscious families, homes with children, art collections, premium furniture, skin-sensitive individuals</p>
+                                <p>Protecting furniture and interiors from fading, homes with valuable furnishings, premium UV protection priority, commercial offices with sensitive equipment</p>
                             </div>
                             <div class="suitability-item">
                                 <h4>Not recommended for</h4>
-                                <p>Budget-focused projects, rental properties, spaces where maximum heat rejection is priority over UV</p>
-                            </div>
-                            <div class="suitability-item">
-                                <h4>Commonly used in</h4>
-                                <p>Family homes, nurseries, art galleries, museums, medical offices, dermatology clinics</p>
+                                <p>Budget-conscious customers, properties where UV blocking is not critical</p>
                             </div>
                         </div>
                         <div class="button-group">
-                            <button class="btn btn-primary" onclick="selectFilm('Ceramic UV400', 110)">Schedule On-Site Measurement</button>
+                            <button class="btn btn-primary" onclick="selectFilm('Ceramic UV400', 120)">Schedule On-Site Measurement</button>
                             <a href="https://online.fliphtml5.com/uuelh/egmo/#p=4" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                                 View Catalogue
                             </a>
@@ -1059,31 +1027,23 @@
                                 <p class="lifespan">Lifespan: 7-9 years</p>
                             </div>
                             <div class="price">
-                                <div class="price-amount">฿130</div>
+                                <div class="price-amount">฿130-150</div>
                                 <div class="price-unit">per sq.ft</div>
                             </div>
                         </div>
-                        <div class="specs">
-                            <span>UVR 99.9%</span>
-                            <span>IRR 75%</span>
-                            <span>TSER 70%</span>
-                        </div>
+                        <p style="font-size: 14px; color: #6e6e73; margin-bottom: 16px; line-height: 1.6;">For top-tier performance, the Titanium Series provides maximum heat and UV rejection, ideal for Thailand's intense tropical heat and superior durability.</p>
                         <div class="suitability">
                             <div class="suitability-item">
                                 <h4>Best for</h4>
-                                <p>Luxury residences, high-rise condos, executive offices, premium commercial spaces, prestige properties</p>
+                                <p>Extreme heat rejection needs, high-end residential properties, commercial buildings in hot climates, maximum energy efficiency priority</p>
                             </div>
                             <div class="suitability-item">
                                 <h4>Not recommended for</h4>
-                                <p>Budget projects, low-end rentals, areas where cost is the primary factor</p>
-                            </div>
-                            <div class="suitability-item">
-                                <h4>Commonly used in</h4>
-                                <p>Penthouse apartments, CEO offices, luxury hotels, upscale restaurants, premium showrooms</p>
+                                <p>Budget-conscious customers, properties with basic protection needs</p>
                             </div>
                         </div>
                         <div class="button-group">
-                            <button class="btn btn-primary" onclick="selectFilm('Titanium Series', 130)">Schedule On-Site Measurement</button>
+                            <button class="btn btn-primary" onclick="selectFilm('Titanium Series', 140)">Schedule On-Site Measurement</button>
                             <a href="https://online.fliphtml5.com/qacii/uawk/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                                 View Catalogue
                             </a>
@@ -1095,35 +1055,27 @@
                         <div class="recommended-badge">Recommended</div>
                         <div class="film-header">
                             <div class="film-info">
-                                <h2>Sputtering Series</h2>
-                                <p class="lifespan">Lifespan: 9 years</p>
+                                <h2>Sputtering Film</h2>
+                                <p class="lifespan">Lifespan: 9+ years</p>
                             </div>
                             <div class="price">
-                                <div class="price-amount">฿155</div>
+                                <div class="price-amount">฿155-170</div>
                                 <div class="price-unit">per sq.ft</div>
                             </div>
                         </div>
-                        <div class="specs">
-                            <span>UVR 99.9%</span>
-                            <span>IRR 85%</span>
-                            <span>TSER 80%</span>
-                        </div>
+                        <p style="font-size: 14px; color: #6e6e73; margin-bottom: 16px; line-height: 1.6;">The premium choice, Sputtering Film combines beautiful optical clarity with superior heat and UV rejection, offering unmatched quality and the longest lifespan.</p>
                         <div class="suitability">
                             <div class="suitability-item">
                                 <h4>Best for</h4>
-                                <p>Ultimate performance, penthouse suites, large glass facades, extreme heat locations, luxury properties</p>
+                                <p>Aesthetic + performance priority, premium residential properties, high-end commercial buildings, customers wanting the best</p>
                             </div>
                             <div class="suitability-item">
                                 <h4>Not recommended for</h4>
-                                <p>Mid-range budgets, standard residential needs, areas where premium performance is not required</p>
-                            </div>
-                            <div class="suitability-item">
-                                <h4>Commonly used in</h4>
-                                <p>Ultra-luxury penthouses, floor-to-ceiling windows, high-end towers, architectural showcases</p>
+                                <p>Budget-conscious customers, short-term temporary needs</p>
                             </div>
                         </div>
                         <div class="button-group">
-                            <button class="btn btn-primary" onclick="selectFilm('Sputtering Series', 155)">Schedule On-Site Measurement</button>
+                            <button class="btn btn-primary" onclick="selectFilm('Sputtering Film', 163)">Schedule On-Site Measurement</button>
                             <a href="https://online.fliphtml5.com/qacii/zzpb/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
                                 View Catalogue
                             </a>
