Add SEO-optimized hero section with Ogilvy copywriting principles
- Added hero section above property type selection
- Includes H1: Premium Window Tinting Services Thailand
- Lists 5 key benefits (UV protection, energy savings, cooling, privacy, heat reduction)
- Targets expats in villas, condos, commercial properties
- CTA button: Schedule On-Site Measurement
- Updated meta description and title for SEO
- Responsive design with gradient background

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JaiDeeClear - UV Protection Film </title>
+    <meta name="description" content="Premium window tinting services in Thailand. Block 99% UV rays, reduce electricity costs, enhance privacy & security. Perfect for expats in villas, condos, commercial properties.">
+    <title>Premium Window Tinting Services Thailand | JaiDeeClear - UV Protection Film</title>
     <script async src="https://cdn.seline.com/seline.js" data-token="900711a10bdeff9"></script>
     <style>
         * {
@@ -764,6 +765,68 @@
         color: #FFA500;  /* orange on hover to match your brand */
     }
 
+    /* Hero Section */
+    .hero-section {
+        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+        padding: 80px 0;
+        text-align: center;
+        margin-bottom: 60px;
+    }
+
+    .hero-content {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 0 22px;
+    }
+
+    .hero-content h1 {
+        font-size: 48px;
+        font-weight: 600;
+        margin-bottom: 16px;
+        letter-spacing: -0.02em;
+        color: #1d1d1f;
+    }
+
+    .hero-subheading {
+        font-size: 19px;
+        color: #6e6e73;
+        margin-bottom: 32px;
+        line-height: 1.5;
+    }
+
+    .benefits-list {
+        list-style: none;
+        padding: 0;
+        margin: 0 auto 32px auto;
+        display: inline-block;
+        text-align: left;
+        font-size: 17px;
+        color: #1d1d1f;
+    }
+
+    .benefits-list li {
+        margin-bottom: 12px;
+        font-weight: 500;
+    }
+
+    @media (max-width: 768px) {
+        .hero-section {
+            padding: 60px 0;
+        }
+
+        .hero-content h1 {
+            font-size: 36px;
+        }
+
+        .hero-subheading {
+            font-size: 17px;
+        }
+
+        .benefits-list {
+            font-size: 15px;
+        }
+    }
+
     </style>
 </head>
 <body>
@@ -794,6 +857,22 @@
     </div>
 
     <main>
+        <!-- Hero Section -->
+        <div class="hero-section">
+            <div class="hero-content">
+                <h1>Premium Window Tinting Services Thailand</h1>
+                <p class="hero-subheading">Transform your space with our high-performance window films. Enjoy enhanced comfort, privacy, and energy savings. Perfect for expats in villas, condos, and commercial properties.</p>
+                <ul class="benefits-list">
+                    <li>✓ Block 99% of harmful UV rays</li>
+                    <li>✓ Lower your electricity bills</li>
+                    <li>✓ Enjoy a cooler, more comfortable space</li>
+                    <li>✓ Enhance your privacy and security</li>
+                    <li>✓ Drastically reduce heat and glare</li>
+                </ul>
+                <a href="https://wa.me/+66655079694" target="_blank" class="btn btn-primary">Schedule On-Site Measurement</a>
+            </div>
+        </div>
+
         <div class="container">
             <!-- Step 1: Property Type -->
             <div class="step active" id="step1">
