Add about.html page and update nav bar across all pages
- Create about.html with full content extracted from Gamma site:
  - Hero section with stats (30+ projects, 5 regions, 99% UV, 5yr warranty)
  - Our Projects section (7 property types)
  - Why UV Protection Matters section with callout box
  - Film Catalogue (7 series: Sputtering, Titanium, Ceramic UV400, Ceramic Nano, Metallized x2, Carbon)
  - Why Choose JaiDeeClear (6 benefit cards)
  - Simple Recommendation Guide (6 budget/need scenarios with prices)
  - Important Notes (6 service notes)
  - Book a Free Consultation with contact info card
  - CTA banner and footer with city location links
- Add 'About' nav link to index.html
- Add 'About' nav link to schedule.html
- Add 'About' nav link to all 10 city pages (window-tinting-*.html)
- Nav order: Logo → About → Schedule → Chat with Us (WhatsApp)

--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
                 </a>
             </div>
             <div class="header-nav">
+                <a href="about.html" class="nav-link">About</a>
                 <a href="schedule.html" class="nav-link">Schedule</a>
                 <a href="https://wa.me/+66655079694" target="_blank" class="whatsapp-btn">
                     <svg class="whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
