--- a/schedule.html
+++ b/schedule.html
@@ -777,6 +777,7 @@
                 </a>
             </div>
             <div class="header-nav">
+                <a href="about.html" class="about-link">About</a>
                 <a href="schedule.html" class="about-link">Schedule</a>
                 <a href="https://wa.me/+66655079694" target="_blank" class="whatsapp-btn">
                     <svg class="whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
