--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About JaiDeeClear — Thailand's trusted premium UV protection window film specialists. Learn about our story, film catalogue, and why thousands of property owners across Thailand choose us.">
     <title>About JaiDeeClear — Premium UV Protection Film Across Thailand</title>
