--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="JaiDeeClear — Thailand's premium window tinting service. UV protection, heat rejection, and privacy film professionally installed at your property in Bangkok, Chiang Mai, Phuket, Pattaya, and more.">
     <title>JaiDeeClear — Premium Window Tinting Across Thailand</title>
