--- a/schedule.html
+++ b/schedule.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Premium window tinting services in Thailand. Block 99% UV rays, reduce electricity costs, enhance privacy & security. Perfect for expats in villas, condos, commercial properties.">
     <title>JaiDeeClear - UV Protection Film </title>
