--- a/window-tinting-bangkok.html
+++ b/window-tinting-bangkok.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best window tinting in Bangkok — JaiDeeClear installs premium UV & heat-rejection film for condos, houses, villas, and offices across Bangkok. Free on-site measurement. Call today.">
     <title>Best Window Tinting in Bangkok | JaiDeeClear</title>
