--- a/window-tinting-hat-yai.html
+++ b/window-tinting-hat-yai.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best window tinting in Hat Yai (Songkhla) — JaiDeeClear installs premium UV & heat-rejection film for homes, shophouses, offices, and commercial buildings across Hat Yai. Free on-site measurement.">
     <title>Best Window Tinting in Hat Yai | JaiDeeClear</title>
