--- a/window-tinting-nonthaburi.html
+++ b/window-tinting-nonthaburi.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best window tinting in Nonthaburi — JaiDeeClear installs premium UV & heat-rejection film for houses, condos, townhouses, and offices across Nonthaburi. Free on-site measurement.">
     <title>Best Window Tinting in Nonthaburi | JaiDeeClear</title>
