--- a/window-tinting-pattaya.html
+++ b/window-tinting-pattaya.html
@@ -137,6 +137,133 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <style>
+        /* ══════════════════════════════════════════════
+           NAV BAR
+           ══════════════════════════════════════════════ */
+        header {
+            position: sticky;
+            top: 0;
+            background: rgba(255, 255, 255, 0.97);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border-bottom: 1px solid #e5e5e7;
+            z-index: 1000;
+        }
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 0 32px;
+            height: 72px;
+        }
+        .logo-container { display: flex; align-items: center; }
+        .logo-container a { display: flex; align-items: center; }
+        .header-nav {
+            display: flex;
+            align-items: center;
+            gap: 36px;
+        }
+        .nav-link {
+            font-size: 15px;
+            font-weight: 500;
+            color: #1d1d1f;
+            text-decoration: none;
+            letter-spacing: -0.01em;
+            transition: color 0.2s ease;
+            white-space: nowrap;
+        }
+        .nav-link:hover { color: #f9a500; }
+        .nav-link.active { color: #f9a500; font-weight: 600; }
+        .whatsapp-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            background: #25D366;
+            color: white;
+            padding: 10px 22px;
+            border-radius: 980px;
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: 600;
+            white-space: nowrap;
+            transition: all 0.2s ease;
+            box-shadow: 0 2px 8px rgba(37,211,102,0.25);
+        }
+        .whatsapp-btn:hover {
+            background: #20BA5A;
+            transform: translateY(-1px);
+            box-shadow: 0 4px 14px rgba(37,211,102,0.35);
+        }
+        .whatsapp-icon { width: 18px; height: 18px; flex-shrink: 0; }
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 5px;
+            width: 40px;
+            height: 40px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 4px;
+            border-radius: 8px;
+            transition: background 0.2s;
+            z-index: 1100;
+        }
+        .hamburger:hover { background: #f5f5f7; }
+        .hamburger span {
+            display: block;
+            width: 22px;
+            height: 2px;
+            background: #1d1d1f;
+            border-radius: 2px;
+            transition: all 0.3s ease;
+            transform-origin: center;
+        }
+        .hamburger.open span:nth-child(1) { transform: translateY(7px) rotate(45deg); }
+        .hamburger.open span:nth-child(2) { opacity: 0; transform: scaleX(0); }
+        .hamburger.open span:nth-child(3) { transform: translateY(-7px) rotate(-45deg); }
+        .mobile-menu {
+            display: none;
+            position: fixed;
+            top: 72px;
+            left: 0;
+            right: 0;
+            background: rgba(255,255,255,0.98);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border-bottom: 1px solid #e5e5e7;
+            padding: 20px 24px 28px;
+            flex-direction: column;
+            gap: 4px;
+            z-index: 999;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.08);
+        }
+        .mobile-menu.open { display: flex; }
+        .mobile-menu .nav-link {
+            font-size: 17px;
+            font-weight: 500;
+            padding: 14px 0;
+            border-bottom: 1px solid #f0f0f2;
+            color: #1d1d1f;
+        }
+        .mobile-menu .nav-link:last-of-type { border-bottom: none; }
+        .mobile-menu .whatsapp-btn {
+            margin-top: 12px;
+            justify-content: center;
+            padding: 14px 22px;
+            font-size: 15px;
+        }
+        @media (max-width: 768px) {
+            .header-content { padding: 0 20px; height: 64px; }
+            .header-nav { display: none; }
+            .hamburger { display: flex; }
+            .mobile-menu { top: 64px; }
+        }
+
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
@@ -150,37 +277,6 @@
         .container { max-width: 980px; margin: 0 auto; padding: 0 22px; }
 
         /* ── Header ── */
-        header {
-            position: sticky; top: 0;
-            background: rgba(255,255,255,0.95);
-            backdrop-filter: blur(20px);
-            border-bottom: 1px solid #e5e5e7;
-            z-index: 100; padding: 20px 0;
-        }
-        .header-content {
-            display: flex; justify-content: space-between; align-items: center;
-            max-width: 980px; margin: 0 auto; padding: 0 22px;
-        }
-        .logo-container { display: flex; align-items: center; gap: 12px; }
-        .logo-container a { display: flex; align-items: center; }
-        .header-nav { display: flex; align-items: center; gap: 24px; }
-        .nav-link {
-            font-size: 14px; color: #1d1d1f; text-decoration: none;
-            font-weight: 500; transition: opacity 0.2s ease;
-        }
-        .nav-link:hover { opacity: 0.7; }
-        .whatsapp-btn {
-            display: flex; align-items: center; gap: 8px;
-            background: #25D366; color: white; padding: 10px 20px;
-            border-radius: 24px; text-decoration: none; font-size: 14px;
-            font-weight: 600; transition: all 0.2s ease;
-            box-shadow: 0 2px 8px rgba(37,211,102,0.3);
-        }
-        .whatsapp-btn:hover {
-            background: #20BA5A; transform: translateY(-1px);
-            box-shadow: 0 4px 12px rgba(37,211,102,0.4);
-        }
-        .whatsapp-icon { width: 20px; height: 20px; }
 
         /* ── Hero ── */
         .hero {
@@ -224,7 +320,7 @@
         /* ── Sections ── */
         .section { padding: 72px 0; }
         .section-alt { background: #f5f5f7; }
-        .section-header { text-align: center; margin-bottom: 52px; }
+        .section-
         .section-eyebrow {
             font-size: 13px; font-weight: 600; text-transform: uppercase;
             letter-spacing: 0.1em; color: #f9a500; margin-bottom: 12px;
@@ -332,35 +428,46 @@
             .section-header h2 { font-size: 30px; }
             .cta-banner { padding: 40px 24px; margin: 0; border-radius: 0; }
             .cta-banner h2 { font-size: 26px; }
-            .header-nav .nav-link { display: none; }
+            .header-nav
         }
     </style>
 </head>
 <body>
 
     <!-- ── Header ── -->
-    <header>
+        <header>
         <div class="header-content">
             <div class="logo-container">
                 <a href="index.html">
-                    <img src="jdclogo.jpg" alt="JaiDee Clear Logo" style="height: 100px; width: auto; object-fit: contain;">
+                    <img src="jdclogo.jpg" alt="JaiDeeClear Logo" style="height: 64px; width: auto; object-fit: contain;">
                 </a>
             </div>
-            <div class="header-nav">
+            <nav class="header-nav">
                 <a href="about.html" class="nav-link">About</a>
                 <a href="schedule.html" class="nav-link">Schedule</a>
                 <a href="https://wa.me/+66655079694" target="_blank" class="whatsapp-btn">
-                    <svg class="whatsapp-icon" viewBox="0 0 24 24" fill="currentColor">
+                    <svg class="whatsapp-icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                         <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
                     </svg>
                     Chat with Us
                 </a>
-            </div>
+            </nav>
+            <button class="hamburger" id="hamburger" aria-label="Open menu" aria-expanded="false">
+                <span></span><span></span><span></span>
+            </button>
         </div>
     </header>
-
-    <!-- ── Hero ── -->
-    <section class="hero">
+    <!-- Mobile menu drawer -->
+    <div class="mobile-menu" id="mobileMenu" role="navigation" aria-label="Mobile navigation">
+        <a href="about.html" class="nav-link">About</a>
+        <a href="schedule.html" class="nav-link">Schedule</a>
+        <a href="https://wa.me/+66655079694" target="_blank" class="whatsapp-btn">
+            <svg class="whatsapp-icon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+                    </svg>
+            Chat with Us
+        </a>
+    </div><section class="hero">
         <div class="container">
             <p class="hero-eyebrow">Window Tinting · Pattaya</p>
             <h1>Best Window Tinting<br>in <em>Pattaya</em></h1>
@@ -627,5 +734,34 @@
         </div>
     </footer>
 
+    <script>
+        (function() {
+            var btn = document.getElementById('hamburger');
+            var menu = document.getElementById('mobileMenu');
+            if (!btn || !menu) return;
+            btn.addEventListener('click', function() {
+                var isOpen = menu.classList.toggle('open');
+                btn.classList.toggle('open', isOpen);
+                btn.setAttribute('aria-expanded', isOpen);
+                document.body.style.overflow = isOpen ? 'hidden' : '';
+            });
+            menu.querySelectorAll('a').forEach(function(link) {
+                link.addEventListener('click', function() {
+                    menu.classList.remove('open');
+                    btn.classList.remove('open');
+                    btn.setAttribute('aria-expanded', 'false');
+                    document.body.style.overflow = '';
+                });
+            });
+            document.addEventListener('click', function(e) {
+                if (!btn.contains(e.target) && !menu.contains(e.target)) {
+                    menu.classList.remove('open');
+                    btn.classList.remove('open');
+                    btn.setAttribute('aria-expanded', 'false');
+                    document.body.style.overflow = '';
+                }
+            });
+        })();
+    </script>
 </body>
 </html>
